# week-1-test

./: readme.md
shared-types/: Cargo.toml
shared-types/src/: lib.rs
transfer_hook/programs/transfer_hook/: Cargo.toml
transfer_hook/programs/transfer_hook/src/: lib.rs
transfer_hook/programs/transfer_hook/src/instructions/: mod.rs  transfer_hook.rs
week1_challenge/: Anchor.toml
week1_challenge/programs/week1_challenge/: Cargo.toml
week1_challenge/programs/week1_challenge/src/: error.rs  lib.rs
week1_challenge/programs/week1_challenge/src/instructions/: create_vault.rs  deposit_withdraw.rs  mint_token.rs  mod.rs  whitelist_user.rs
week1_challenge/programs/week1_challenge/src/state/: whitelist.rs
week1_challenge/programs/week1_challenge/src/tests/: mod.rs
week1_challenge/tests/: week1_challenge.ts
