[package]
name = "transfer_hook"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "transfer_hook"

[features]
default = []
cpi = ["no-entrypoint"]
# features = ["cpi"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]


[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
# shared-types = { path = "../../../shared-types" }
week1_challenge = { path = "../../../week1_challenge/programs/week1_challenge", features = [
    "cpi",
] }
