[package]
name = "week1_challenge"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "week1_challenge"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]


[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.1" }
# shared-types = { path = "../../../shared-types" }
# transfer-hook = { path = "../../../transfer_hook/programs/transfer_hook", features = [
#     "cpi",
# ] }
