[package]
name = "week1_challenge"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "week1_challenge"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]


[dependencies]
anchor-lang = { version = "0.31.1", features = [
    "init-if-needed",
    "interface-instructions",
] }
anchor-spl = { version = "0.31.1" }
# Library for easy management of 8-byte discriminators
spl-discriminator = "0.4"
# Library defining a generic state interface to encode additional required accounts for an instruction, using Type-Length-Value structures
spl-tlv-account-resolution = "0.10.0"
# Library with helper to resolve additional accounts
spl-transfer-hook-interface = "0.10.0"

[dev-dependencies]
spl-token-2022 = { version = "9.0.0", features = ["no-entrypoint"] }
